# MCP_V-

./: .env  client.py  math_Server.py  pyproject.toml  requirements.txt  rought.txt  weather.py
